* update depends and cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 #----------------------------------------------------------------------
 
+message("Fetching glfw")
+
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 option(GLFW_LIBRARY_TYPE "Link glfw static or dynamic" STATIC)
 option(GLFW_BUILD_TESTS "" OFF)
@@ -14,30 +16,25 @@ option(GLFW_BUILD_EXAMPLES "" OFF)
 FetchContent_Declare(
     glfw
     GIT_REPOSITORY https://github.com/glfw/glfw
-    GIT_TAG        3.3.2
+    GIT_TAG        3.3.10
 )
 
-message("Fetching glfw")
 FetchContent_MakeAvailable(glfw)
 
 #----------------------------------------------------------------------
 
+message("Fetching glad")
+
 FetchContent_Declare(
     glad
     GIT_REPOSITORY https://github.com/Dav1dde/glad.git
+    GIT_TAG        v2.0.8
+    SOURCE_SUBDIR  cmake
 )
 
-message("Fetching glad")
-FetchContent_GetProperties(glad)
+FetchContent_MakeAvailable(glad)
 
-if(NOT glad_POPULATED)
-    FetchContent_Populate(glad)
-    set(GLAD_PROFILE "core" CACHE STRING "OpenGL profile")
-    set(GLAD_API "gl=4.6" CACHE STRING "API type/version pairs, like \"gl=4.6\", no version means latest")
-    set(GLAD_GENERATOR "c" CACHE STRING "Language to generate the bindings for")
-    set(GLAD_EXTENSIONS "GL_ARB_bindless_texture" CACHE STRING "Extensions to take into consideration when generating the bindings")
-    add_subdirectory(${glad_SOURCE_DIR} ${glad_BINARY_DIR})
-endif()
+glad_add_library(glad_gl_core_46 STATIC LANGUAGE c REPRODUCIBLE API gl:core=4.6 EXTENSIONS GL_ARB_bindless_texture)
 
 #----------------------------------------------------------------------
 
@@ -49,10 +46,10 @@ set(commonFiles
 )
 
 add_executable(BindlessCompressedLodArtifacts "BindlessCompressedLodArtifacts" BindlessCompressedLodArtifacts/Main.cpp ${commonFiles})
-target_link_libraries(BindlessCompressedLodArtifacts PRIVATE glad glfw)
+target_link_libraries(BindlessCompressedLodArtifacts PRIVATE glad_gl_core_46 glfw PUBLIC glad_gl_core_46)
 
 add_executable(BindlessPerformanceOverhead "BindlessPerformanceOverhead" BindlessPerformanceOverhead/Main.cpp ${commonFiles})
-target_link_libraries(BindlessPerformanceOverhead PRIVATE glad glfw)
+target_link_libraries(BindlessPerformanceOverhead PRIVATE glad_gl_core_46 glfw PUBLIC glad_gl_core_46)
 
 add_executable(MappedBufferHostMemInvestigation "MappedBufferHostMemInvestigation" MappedBufferHostMemInvestigation/Main.cpp ${commonFiles})
-target_link_libraries(MappedBufferHostMemInvestigation PRIVATE glad glfw)
+target_link_libraries(MappedBufferHostMemInvestigation PRIVATE glad_gl_core_46 glfw PUBLIC glad_gl_core_46)
